--- a/.env
+++ b/.env
@@ -4,4 +4,9 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:123@localhost:5432/mili?schema=public"
+DATABASE_URL="postgresql://postgres:123456@localhost:5432/mili?schema=public"
+
+
+AWS_KEYID="AKIA5LPKZRHTI6T22GEN"
+AWS_SECRET_KEY="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"
+BUCKET_NAME="mili-upload"
