--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # compiled output
 /dist
 /node_modules
-*.env
 # Logs
 logs
 *.log
@@ -33,3 +32,8 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+#dotenv environment variables file
+.env
+.env.dev
+.env.test
